[package]
name = "tokio_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
once_cell = "1.8.0"
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["rustls_backend", "client", "gateway", "model", "cache"]
